# greener-reporter

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  build.zig  flake.nix  go.work
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
include/greener_reporter/: greener_reporter.h
include/greener_servermock/: greener_servermock.h
reporter/: Cargo.toml  batcher.go  errors.go  go.mod  ingress.go  models.go  reporter.go
reporter-cli/: Cargo.toml
reporter-cli/src/: main.rs
reporter-ffi/: .gitignore  build.sh  go.mod  main.go
reporter/src/: batcher.rs  errors.rs  ingress.rs  lib.rs  models.rs  reporter.rs
reporter/tests/: integration.rs
scripts/: ci-build.sh
servermock/: Cargo.toml  api.go  fixtures.go  go.mod  servermock.go
servermock-ffi/: .gitignore  build.sh  go.mod  main.go
servermock-rs/: Cargo.toml
servermock-rs/src/: lib.rs
servermock/src/: fixtures.rs  server.rs
src/: cli.zig  reporter.zig  reporter_cli.zig  servermock.zig  test.zig
tests-ffi/: build.rs  ffi.go  ffi_test.go  go.mod
tests-ffi-go/: ffi.go  ffi_test.go  go.mod
tests-ffi-rs/: Cargo.toml  build.rs
tests-ffi-rs/tests/: ffi.rs
tests-ffi/tests/: ffi.rs
util/: generate-sample-data.sh
util/greener-reporter-cli/: client.go  go.mod  main.go
z/: .gitignore  Dockerfile  build.zig
z/src/: reporter.zig
