[package]
name = "greener-reporter"
version = "0.0.2"
edition = "2024"

[lib]
name = "greener_reporter"
crate-type = ["rlib", "cdylib"]

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "rt", "macros"] }
futures = "0.3"
once_cell = "1.18"

[dev-dependencies]
greener-servermock = { path = "../servermock" }
