[package]
name = "greener-reporter"
version = "0.0.3"
edition = "2024"

[lib]
name = "greener_reporter"
crate-type = ["rlib", "cdylib"]

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
greener-servermock = { path = "../servermock" }
