[package]
name = "greener-servermock"
version = "0.0.3"
edition = "2024"

[lib]
name = "greener_servermock"
crate-type = ["rlib", "cdylib"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
warp = "0.4"
